--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,6 @@ jobs:
       - name: Upload artifacts
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            release/**/*
+          files: dist/*.dmg,dist/*.zip,dist/*.exe,dist/*.nsis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
