--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
       "allowToChangeInstallationDirectory": true
     }
   },
+  "dependencies": {
+    "pdf-lib": "^1.17.1"
+  },
   "devDependencies": {
     "electron": "^30.0.0",
     "electron-reload": "^2.0.0-alpha.1",
-    "pdf-lib": "^1.17.1",
     "electron-builder": "^26.0.12"
   }
 }
